--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="KRYONIS – The Sovereign Metabolic Council" />
   <meta
     property="og:description"
-    content="A restricted pre-summit briefing and a diplomatic private dinner on the TEC-X Protocol in Dubai, February 2 & 4, 2026."
+    content="A restricted pre-summit briefing and a sovereign-tier council dinner on the TEC-X Protocol in Dubai, February 2 & 4, 2026."
   />
   <meta property="og:url" content="https://kryonis.global/council" />
   <meta property="og:image" content="https://kryonis.global/assets/council-og.jpg" />
@@ -26,11 +26,11 @@
   <meta name="twitter:title" content="KRYONIS – The Sovereign Metabolic Council" />
   <meta
     name="twitter:description"
-    content="A restricted pre-summit briefing and a diplomatic private dinner on the TEC-X Protocol in Dubai, February 2 & 4, 2026."
+    content="A restricted pre-summit briefing and a sovereign-tier council dinner on the TEC-X Protocol in Dubai, February 2 & 4, 2026."
   />
   <meta name="twitter:image" content="https://kryonis.global/assets/council-og.jpg" />
 
-  <!-- Favicon (kohenda oma tee järgi) -->
+  <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="icon" type="image/png" href="/favicon.png" />
 
@@ -51,6 +51,7 @@
       --gold-hover: #e8c44a;
       --text-main: #d0c9c0;
       --text-muted: #8f8a80;
+      --text-muted-soft: #7b756e;
       --border: #262026;
     }
 
@@ -124,36 +125,42 @@
 
     .hero-subtitle {
       font-family: "Cinzel", serif;
-      font-size: 1rem;
-      letter-spacing: 0.2em;
+      font-size: 0.98rem;
+      letter-spacing: 0.22em;
       text-transform: uppercase;
-      color: var(--gold);
-      margin-bottom: 24px;
+      color: var(--gold-soft);
+      margin-bottom: 22px;
     }
 
     .hero-meta {
       display: inline-flex;
       flex-wrap: wrap;
-      gap: 12px;
+      gap: 16px;
       align-items: center;
       justify-content: center;
       font-size: 0.8rem;
       color: var(--text-muted);
-      margin-bottom: 20px;
+      margin-bottom: 16px;
+    }
+
+    .hero-meta span {
+      display: inline-flex;
+      align-items: center;
     }
 
     .hero-meta span::before {
       content: "•";
       color: var(--gold);
-      margin-right: 6px;
+      margin-right: 10px;
+      font-size: 0.9rem;
     }
 
     .hero-note {
       font-size: 0.8rem;
-      color: var(--text-muted);
+      color: var(--text-muted-soft);
       max-width: 640px;
       margin: 0.5rem auto 0;
-      line-height: 1.6;
+      line-height: 1.7;
     }
 
     main {
@@ -192,19 +199,28 @@
         grid-template-columns: 1fr;
       }
 
+      header {
+        padding-bottom: 40px;
+      }
+
       .hero-title {
         font-size: 1.9rem;
         letter-spacing: 0.18em;
       }
 
       .hero-subtitle {
-        font-size: 0.9rem;
+        font-size: 0.86rem;
+        letter-spacing: 0.18em;
+      }
+
+      .hero-note {
+        font-size: 0.78rem;
       }
     }
 
     .event-card {
       border: 1px solid var(--border);
-      padding: 28px 24px 24px;
+      padding: 24px 20px 22px;
       background: linear-gradient(
         135deg,
         rgba(212, 175, 55, 0.04),
@@ -281,7 +297,13 @@
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
-      margin-top: 8px;
+      margin-top: 10px;
+    }
+
+    @media (max-width: 600px) {
+      .cta-row {
+        flex-direction: column;
+      }
     }
 
     .cta-primary,
@@ -369,15 +391,16 @@
       max-width: 560px;
       margin-left: auto;
       margin-right: auto;
+      line-height: 1.7;
     }
 
     .footer {
       margin-top: 72px;
-      padding-top: 32px;
+      padding-top: 24px;
       border-top: 1px solid rgba(212, 175, 55, 0.15);
       text-align: center;
-      font-size: 0.8rem;
-      color: var(--text-muted);
+      font-size: 0.78rem;
+      color: #6f6861;
     }
 
     .footer-brand {
@@ -385,14 +408,15 @@
       letter-spacing: 0.18em;
       text-transform: uppercase;
       color: var(--gold-soft);
-      margin-bottom: 8px;
+      margin-bottom: 6px;
+      font-size: 0.78rem;
     }
 
     .footer-links {
       display: inline-flex;
       gap: 18px;
-      margin-bottom: 10px;
-      font-size: 0.8rem;
+      margin-bottom: 8px;
+      font-size: 0.78rem;
     }
 
     .footer-links a {
@@ -416,7 +440,7 @@
     }
 
     .footer-contact {
-      margin-top: 6px;
+      margin-top: 4px;
     }
 
     .footer-contact a {
@@ -430,17 +454,18 @@
 
     .footer-legal {
       margin-top: 4px;
+      font-size: 0.7rem;
     }
   </style>
 </head>
 <body>
   <div class="page">
     <header>
-      <p class="meta-top">KRYONIS Sovereign Systems Limited (Hong Kong)</p>
-      <p class="meta-sub">Office of the Founder · Sovereign Strategy Division</p>
+      <p class="meta-top">KRYONIS SOVEREIGN SYSTEMS LIMITED (HONG KONG)</p>
+      <p class="meta-sub">OFFICE OF THE FOUNDER · SOVEREIGN STRATEGY DIVISION</p>
 
-      <h1 class="hero-title">The Sovereign Metabolic Council</h1>
-      <p class="hero-subtitle">TEC-X Strategic Assemblies · Dubai 2026</p>
+      <h1 class="hero-title">THE SOVEREIGN METABOLIC COUNCIL</h1>
+      <p class="hero-subtitle">TEC-X STRATEGIC ASSEMBLIES · DUBAI 2026</p>
 
       <div class="hero-meta">
         <span>Dubai, United Arab Emirates</span>
@@ -506,7 +531,7 @@
               >
                 Request Briefing Access
               </a>
-              <!-- Kohenda PDF link vastavalt oma serverile -->
+              <!-- kohanda PDF tee vastavalt oma serverile -->
               <a
                 href="/assets/kryonis-presummit-briefing.pdf"
                 class="cta-secondary"
@@ -545,7 +570,7 @@
               >
                 Request Council Invitation
               </a>
-              <!-- Kohenda PDF link vastavalt oma serverile -->
+              <!-- kohanda PDF tee vastavalt oma serverile -->
               <a
                 href="/assets/kryonis-sovereign-council.pdf"
                 class="cta-secondary"
@@ -594,8 +619,8 @@
             Access is extended only via direct diplomatic and strategic channels.
           </p>
           <p class="access-note">
-            Participation is subject to enhanced due diligence and sovereign approval. This communiqué does not constitute
-            an offer of securities or financial products.
+            Participation is subject to enhanced due diligence and sovereign approval.
+            This communiqué does not constitute an offer of securities or financial products.
           </p>
         </div>
       </section>
