--- a/index.html
+++ b/index.html
@@ -308,7 +308,9 @@
 
     .cta-primary,
     .cta-secondary {
-      display: inline-block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       padding: 10px 22px;
       border-radius: 999px;
       font-size: 0.8rem;
@@ -318,6 +320,7 @@
       border: 1px solid var(--gold);
       background: transparent;
       color: var(--gold);
+      text-align: center;
       transition: background 0.15s ease, color 0.15s ease, box-shadow 0.15s ease;
     }
 
@@ -374,7 +377,6 @@
     }
 
     .access-block {
-      text-align: center;
       margin-top: 48px;
     }
 
@@ -382,15 +384,21 @@
       font-size: 0.95rem;
       margin-bottom: 16px;
       color: var(--text-main);
+      text-align: left;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.7;
     }
 
     .access-note {
       font-size: 0.78rem;
       color: var(--text-muted);
-      margin-top: 12px;
-      max-width: 560px;
+      margin-top: 4px;
+      max-width: 600px;
       margin-left: auto;
       margin-right: auto;
+      text-align: left;
       line-height: 1.7;
     }
 
